:bug: Fix speaker location’s spacing on the homepage

--- a/css/_components.speaker-item.css
+++ b/css/_components.speaker-item.css
@@ -24,3 +24,7 @@
     margin-top: 2rem;
   }
 }
+
+.speaker-item__location {
+  margin-left: .1rem;
+}
